--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="canonical" href="./">
-	<link rel="alternate" type="application/rss+xml" title="Zhao's
+	<link rel="alternate" type="application/rss+xml" title="Qin's
 	Group" href="./feed.xml">
 
 </head>
@@ -23,7 +23,7 @@
 			<div class="wrapper navigation-wrapper has-logo">
 				<div class="navigation-links">
 					<a href="./">
-						<img src="./images/ZhaoGrouplogo.png" loading="lazy" alt="Zhao Group
+						<img src="./images/ZhaoGrouplogo.png" loading="lazy" alt="Qin Group
 						Logo" class="lab-logo">
 					</a>
 					<a href="https://uh.edu/" target="_blank">
