--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			<div class="wrapper navigation-wrapper has-logo">
 				<div class="navigation-links">
 					<a href="./">
-						<img src="./images/ZhaoGrouplogo.png" loading="lazy" alt="Qin Group
+						<img src="./images/QinGrouplogo.png" loading="lazy" alt="Qin Group
 						Logo" class="lab-logo">
 					</a>
 					<a href="https://uh.edu/" target="_blank">
-						<img src="./images/UHlogo.png" loading="lazy" alt="Univeristy of Houston
+						<img src="./images/SDlogo.png" loading="lazy" alt="Shandong University
 						Logo" class="uh-logo">
 					</a>
 				</div>
