--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			<footer id="myFooter"></footer>
 			<script src="./js/myscripts.js"></script>
 
-		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=150&d=dE_LoPwu3QeqLpJ-ymLLtVsOwWrkB_pA8qIdKlL3WLU&t=t'></script>
+		  
     <!-- Le javascript
     	================================================== -->
     	<!-- Placed at the end of the document so the pages load faster -->
@@ -207,7 +207,16 @@
     	
 		</div>
 
+        <script>
+    		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    		ga('create', 'UA-72321206-1', 'auto');
+    		ga('send', 'pageview');
+
+    	</script>
 
 
 
