--- a/index.html
+++ b/index.html
@@ -87,53 +87,20 @@
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
 								<img src="./images/ss1.jpg" style="width:100%">
-								<div class="text">Axion-Field-Enabled Nonreciprocal Thermal Radiation in Weyl Semimetals</div>
+								<div class="text">CP A-X spectroscppy</div>
 							</div>
 
 							<div class="mySlides fade">
 								<img src="./images/ss2.jpg" style="width:100%">
-								<div class="text">Self-Sustaining Thermophotonic Circuits</div>
+								<div class="text">Radiative association of N2+</div>
 							</div>
 
 							<div class="mySlides fade">
 								<img src="./images/ss3.jpg" style="width:100%">
-								<div class="text">Strong Plasmonic Coupling Between Graphene Ribbon Array and Metal Gratings</div>
+								<div class="text">photodissociation of AlF</div>
 							</div>
 
-							<div class="mySlides fade">
-								<img src="./images/ss4.jpg" style="width:100%">
-								<div class="text">Integrated Near-Field Thermo-Photovoltaics for On-Demand Heat Recycling</div>
-							</div>
-
-							<div class="mySlides fade">
-								<img src="./images/ss5.jpg" style="width:100%">
-								<div class="text">Sub-Wavelength Passive Optical Isolators Using Photonic Structures Based on Weyl Semimetals</div>
-							</div>
-
-							<div class="mySlides fade">
-								<img src="./images/ss6.jpg" style="width:100%">
-								<div class="text">Enhanced Photon Tunneling by Surface Plasmon-Phonon Polaritons in Graphene/hBN Heterostructures</div>
-							</div>
-
-							<div class="mySlides fade">
-								<img src="./images/ss7.jpg" style="width:100%">
-								<div class="text">Experimental Demonstration of Energy Harvesting from The Sky Using The Negative Illumination Effect of a Semiconductor Photodiode</div>
-							</div>
-
-							<div class="mySlides fade">
-								<img src="./images/ss8.jpg" style="width:100%">
-								<div class="text">Chemical Potential of Photons and Its Implications For Controlling Radiative Heat Transfer</div>
-							</div>
-
-							<div class="mySlides fade">
-								<img src="./images/ss9.jpg" style="width:100%">
-								<div class="text">Near-field Radiative Heat Transfer Between Doped-Si Parallel Plates Separated by a Spacing down to 200 nm</div>
-							</div>
-
-							<div class="mySlides fade">
-								<img src="./images/ss10.jpg" style="width:100%">
-								<div class="text">MESH: A Free Electromagnetic Solver for Far-Field and Near-Field Radiative Heat Transfer for Layered Periodic Structures</div>
-							</div>
+							
 
 							<!-- Next and previous buttons -->
 							<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
