--- a/People.html
+++ b/People.html
@@ -131,7 +131,7 @@
 
                 <tr>
                 <td valign="top" width="110px">
-                  <img src="./images/Zhangshuai.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
+                  <img src="./images/zhangshuai.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Shuai Zhang Taroua</p>
@@ -141,7 +141,7 @@
                 
                 <tr>
                 <td valign="top" width="110px">
-                  <img src="./images/Menghan.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
+                  <img src="./images/menghan.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Han Meng</p>
@@ -150,7 +150,7 @@
 
                 <tr>
                 <td valign="top" width="110px">
-                  <img src="./images/Peigen.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
+                  <img src="./images/peigen.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Peigen Hu</p>
