--- a/People.html
+++ b/People.html
@@ -69,7 +69,7 @@
 
 
                   <td valign="top" width="110px">
-                    <img src="./images/qinzhzi.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
+                    <img src="./images/qinzhi.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
                   </td>
                   <td valign="top">
                     <a href="https://dr-zhi-qin.github.io/personal/" target="_blank"><strong>
