--- a/people.html
+++ b/people.html
@@ -134,7 +134,7 @@
                   <img src="./images/zhangshuai.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
                 </td>
                 <td valign="top">
-                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Shuai Zhang Taroua</p>
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Shuai Zhang</p>
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Master student</p>                                
                 </tr>
 
