--- a/people.html
+++ b/people.html
@@ -112,7 +112,7 @@
 
                 <tr>
                 <td valign="top" width="110px">
-                  <img src="./images/Guanan.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
+                  <img src="./images/Guanan.jpg" class="profile-picture" alt="Guanan Chen" width="110px">
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Guanan Chen</p>
@@ -125,6 +125,15 @@
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ximing Li</p>
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ph.D student</p>                                
+                </tr>
+                
+                <tr>
+                <td valign="top" width="110px">
+                  <img src="./images/Liangxi.jpg" class="profile-picture" alt="Xi Liang" width="110px">
+                </td>
+                <td valign="top">
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Xi Liang</p>
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ph.D student</p>                                
                 </tr>
                                 
