--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 								<p style="text-align: center"><b>We are hiring!</b></p> 
 								<br>          
-								<p style="text-align: justify">In the <strong> Molecular Spectroscopy (MS) Lab</strong>, we work on theoretical spectroscopy of gaseous molecules, which are applied to astrophysics and industries, with a particular emphasis on hot atmospheres and supersonic flights</p>
+								<p style="text-align: justify">In the <strong> Molecular Spectroscopy (MS) Lab</strong>, we work on theoretical spectroscopy of gaseous molecules, which are applied to astrophysics and industries, with a particular emphasis on hot atmospheres and supersonic flights.</p>
 								<br>
 
 								<p style="text-align: justify">We highlight some of our recent research, including high-resolution spectroscopy, radiative association and photodissociation</p> 
