--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								<ul style="text-align: justify"> 
 
 									<li>05/22/2022: Tianrui Bai completes her doctoral defence. Congrats!</li>
-									<li>05/20/2022: Dr. Qin join the Institute of Frontier and Interdisciplinary Science at Shandong University.</li>
+									<li>05/20/2022: Dr. Zhi Qin join the Institute of Frontier and Interdisciplinary Science at Shandong University.</li>
 
 								</ul>
 								<p style="margin-bottom: 20px;"></p>
