--- a/people.html
+++ b/people.html
@@ -106,7 +106,8 @@
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Tianrui Bai</p>
-                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ph.D. student</p>                               
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ph.D </p> 
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> She obtained her Ph.D degree in May 2022</p>   
                 </tr>
 
 
