--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						Logo" class="lab-logo">
 					</a>
 					<a href="https://uh.edu/" target="_blank">
-						<img src="./images/SDlogo.png" loading="lazy" alt="Shandong University
+						<img src="./images/SDUlogo2.jpeg" loading="lazy" alt="Shandong University
 						Logo" class="uh-logo">
 					</a>
 				</div>
