--- a/people.html
+++ b/people.html
@@ -29,7 +29,7 @@
             Logo" class="lab-logo">
           </a>
           <a href="https://uh.edu/" target="_blank">
-            <img src="./images/SDlogo.png" alt="Shandong University
+            <img src="./images/SDUlogo2.jpeg" alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
