--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body>
-	<div class="content-box" style="width: 93%">
+	<div class="content-box" style="width: 200%">
 		<header class="site-header" role="banner">
 			<div class="wrapper navigation-wrapper has-logo">
 				<div class="navigation-links">
@@ -26,8 +26,8 @@
 						<img src="./images/QinGrouplogo.png" loading="lazy" alt="Qin Group
 						Logo" class="lab-logo">
 					</a>
-					<a href="https://uh.edu/" target="_blank">
-						<img src="./images/SDUlogo2.jpeg" loading="lazy" alt="Shandong University
+					<a href="https://sdu.edu.cn/" target="_blank">
+						<img src="./images/SDlogo.png" loading="lazy" alt="Shandong University
 						Logo" class="uh-logo">
 					</a>
 				</div>
