--- a/people.html
+++ b/people.html
@@ -20,7 +20,7 @@
 
 
 <body>
-  <div class="content-box" style="width: 93%">
+  <div class="content-box" style="width: 200%">
     <header class="site-header" role="banner">
       <div class="wrapper navigation-wrapper has-logo">
         <div class="navigation-links">
@@ -28,8 +28,8 @@
             <img src="./images/QinGrouplogo.png" alt="Qin Group
             Logo" class="lab-logo">
           </a>
-          <a href="https://uh.edu/" target="_blank">
-            <img src="./images/SDUlogo2.jpeg" alt="Shandong University
+          <a href="https://sdu.edu.cn/" target="_blank">
+            <img src="./images/SDlogo.png" alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
