--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body>
-	<div class="content-box" style="width: 200%">
+	<div class="content-box" style="width: 100%">
 		<header class="site-header" role="banner">
 			<div class="wrapper navigation-wrapper has-logo">
 				<div class="navigation-links">
@@ -27,7 +27,7 @@
 						Logo" class="lab-logo">
 					</a>
 					<a href="https://sdu.edu.cn/" target="_blank">
-						<img src="./images/SDlogo.png" loading="lazy" alt="Shandong University
+						<img src="./images/SDlogo1.png" loading="lazy" alt="Shandong University
 						Logo" class="uh-logo">
 					</a>
 				</div>
