--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<img src="./images/QinGrouplogo.png" loading="lazy" alt="Qin Group
 						Logo" class="lab-logo">
 					</a>
-					<a href="https://sdu.edu.cn/" target="_blank">
-						<img src="./images/SDlogo1.png" loading="lazy" alt="Shandong University
+					<a href="https://www.sdu.edu.cn/" target="_blank">
+						<img src="./images/SDlogo2.png" loading="lazy" alt="Shandong University
 						Logo" class="uh-logo">
 					</a>
 				</div>
