--- a/people.html
+++ b/people.html
@@ -28,8 +28,8 @@
             <img src="./images/QinGrouplogo.png" alt="Qin Group
             Logo" class="lab-logo">
           </a>
-          <a href="https://sdu.edu.cn/" target="_blank">
-            <img src="./images/SDlogo1.png" alt="Shandong University
+          <a href="https://www.sdu.edu.cn/" target="_blank">
+            <img src="./images/SDlogo2.png" alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
