--- a/people.html
+++ b/people.html
@@ -20,7 +20,7 @@
 
 
 <body>
-  <div class="content-box" style="width: 200%">
+  <div class="content-box" style="width: 100%">
     <header class="site-header" role="banner">
       <div class="wrapper navigation-wrapper has-logo">
         <div class="navigation-links">
@@ -29,7 +29,7 @@
             Logo" class="lab-logo">
           </a>
           <a href="https://www.sdu.edu.cn/" target="_blank">
-            <img src="./images/SDlogo2.jpg" alt="Shandong University
+            <img src="./images/SDlogo1.png" style="width: 30%"alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
