--- a/people.html
+++ b/people.html
@@ -29,7 +29,7 @@
             Logo" class="lab-logo">
           </a>
           <a href="https://www.sdu.edu.cn/" target="_blank">
-            <img src="./images/SDlogo1.png" style="width: 30%"alt="Shandong University
+            <img src="./images/SDlogo1.png" style="width: 25%" style="height: 150%" alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
