--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						Logo" class="lab-logo">
 					</a>
 					<a href="https://www.sdu.edu.cn/" target="_blank">
-						<img src="./images/SDlogo1.png" style="width: 25%" style="height: 150%" loading="lazy" alt="Shandong University
+						<img src="./images/SDlogo1.png" width="30px" height="20px"  loading="lazy" alt="Shandong University
 						Logo" class="uh-logo">
 					</a>
 				</div>
