--- a/people.html
+++ b/people.html
@@ -25,11 +25,11 @@
       <div class="wrapper navigation-wrapper has-logo">
         <div class="navigation-links">
           <a href="./">
-            <img src="./images/QinGrouplogo.gif" alt="Qin Group
+            <img src="./images/QinGrouplogo.gif" width="150px"alt="Qin Group
             Logo" class="lab-logo">
           </a>
           <a href="https://www.sdu.edu.cn/" target="_blank">
-            <img src="./images/SDlogo1.png" width="130px" height="70px"  alt="Shandong University
+            <img src="./images/SDlogo1.gif" width="130px" height="70px"  alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
