--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
       <div class="wrapper navigation-wrapper has-logo">
         <div class="navigation-links">
           <a href="./">
-            <img src="./images/QinGrouplogo.gif" width="200px" alt="Qin Group
+            <img src="./images/QinGrouplogo.gif"  alt="Qin Group
             Logo" class="lab-logo">
           </a>
           <a href="https://www.sdu.edu.cn/" target="_blank">
