--- a/people.html
+++ b/people.html
@@ -29,7 +29,7 @@
             Logo" class="lab-logo">
           </a>
           <a href="https://www.sdu.edu.cn/" target="_blank">
-            <img src="./images/SDlogo1.gif" width="190px" height="90px"  alt="Shandong University
+            <img src="./images/SDlogo1.gif"  alt="Shandong University
             Logo" class="uh-logo">
           </a>
         </div>
