--- a/people.html
+++ b/people.html
@@ -81,7 +81,7 @@
                   <!-- <p style="word-spacing: 0pt; margin-top:
                     0pt; margin-bottom: 0pt;">&nbsp; </p> -->
                     <p style="word-spacing: 0pt; margin-top:
-                    0pt; margin-bottom: 0pt;">Associate research fellow</p>
+                    0pt; margin-bottom: 0pt;">PhD, Associate research fellow</p>
                     <p style="word-spacing: 0pt; margin-top:
                     0pt; margin-bottom: 0pt;">Institute of Frontier and Interdisciplinary Science </p>
                     <p style="word-spacing: 0pt; margin-top:
@@ -135,6 +135,15 @@
                 </td>
                 <td valign="top">
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Xi Liang</p>
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ph.D student</p>                                
+                </tr>
+                
+                <tr>
+                <td valign="top" width="110px">
+                  <img src="./images/DingZi.png" class="profile-picture" alt="Zi Ding" width="110px">
+                </td>
+                <td valign="top">
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Zi Ding</p>
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Ph.D student</p>                                
                 </tr>
                                 
