--- a/people.html
+++ b/people.html
@@ -175,6 +175,15 @@
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Peigen Hu</p>
                   <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Master student</p>                               
                 </tr>
+                
+                <tr>
+                <td valign="top" width="110px">
+                  <img src="./images/Houzhenlu2.jpg" class="profile-picture" alt="Bo Zhao" width="110px">
+                </td>
+                <td valign="top">
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Zhenlu Hou</p>
+                  <p style="word-spacing: 0pt; margin-top: 0pt; margin-bottom: 0pt;"> Master student</p>                               
+                </tr>
 
 
 
