--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<a class="page-link active" href="./index.html">Home</a>
 							<a class="page-link" href="./people.html">People</a>
 							<a class="page-link " href="./research.html">Research</a>
-							<a class="page-link " href="./publications.html">Publications</a>
+							<a class="page-link " href="./Publications.html">Publications</a>
 							<a class="page-link " href="./teaching.html">Teaching</a>
 							<a class="page-link " href="./opening.html">Opening</a>
 						</div>
