--- a/people.html
+++ b/people.html
@@ -50,7 +50,7 @@
               <a class="page-link" href="./index.html">Home</a>
               <a class="page-link active" href="./people.html">People</a>
               <a class="page-link " href="./research.html">Research</a>
-              <a class="page-link " href="./publications.html">Publications</a>
+              <a class="page-link " href="./Publications.html">Publications</a>
               <a class="page-link " href="./teaching.html">Teaching</a>
               <a class="page-link " href="./opening.html">Opening</a>
             </div>
