--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@
 
               <h4 class="pub-year-head">2022</h4>
               <li>            
-		Ximing Li, <b>Zhi Qin</b>, Jing Li*, Linhua Liu*, 2022, “An accurate NH2(X2A′′) CHIPR potential energy surface via extrapolation to the complete basis set limit and dynamics of the N(2D) + H2(X1Σ+g) reaction,”  <em class="journal">Physical Chemistry Chemical Physics</em>, Vol. 24, p. 26564. [<a href="/personalpdf/Li_PCCP.pdf" target="_blank">PDF</a>]
+		Ximing Li, <b>Zhi Qin</b>, Jing Li*, Linhua Liu*, 2022, “An accurate NH2(X2A′′) CHIPR potential energy surface via extrapolation to the complete basis set limit and dynamics of the N(2D) + H2(X1Σ+g) reaction,”  <em class="journal">Physical Chemistry Chemical Physics</em>, Vol. 24, p. 26564. [<a href="/personal/pdf/Li_PCCP.pdf" target="_blank">PDF</a>]
 	      </li>
             
               <li>
