--- a/opening.html
+++ b/opening.html
@@ -54,8 +54,8 @@
               <a class="page-link " href="./people.html">People</a>
               <a class="page-link" href="./research.html">Research</a>
               <a class="page-link" href="./publications.html">Publications</a>
-              <a class="page-link active" href="./teaching.html">Teaching</a>
-              <a class="page-link " href="./opening.html">Opening</a>
+              <a class="page-link" href="./teaching.html">Teaching</a>
+              <a class="page-link active" href="./opening.html">Opening</a>
             </div>
           </nav>
         </div>
