--- a/publications.html
+++ b/publications.html
@@ -81,6 +81,9 @@
               
               
               <h4 class="pub-year-head">2023</h4>
+	      <li>            
+		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Formation of SiO+ through radiative association of Si+(3s23p 2Pu) and O(2s22p4 3Pg),”  <em class="journal">Astronomy & Astrophysics</em>, Accepted. 
+	      </li>
               <li>            
 		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Collision integrals for N(4S)-N(4S), N(4S)-N(2D) and N(4S)-N(2P) interaction,”  <em class="journal">Physics of Fluids</em>, Accepted. 
 	      </li>
