--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
 		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Formation of SiO+ through radiative association of Si+(3s23p 2Pu) and O(2s22p4 3Pg),”  <em class="journal">Astronomy & Astrophysics</em>, Accepted. 
 	      </li>
               <li>            
-		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Collision integrals for N(4S)-N(4S), N(4S)-N(2D) and N(4S)-N(2P) interaction,”  <em class="journal">Physics of Fluids</em>, Accepted. 
+		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Collision integrals for N(4S)-N(4S), N(4S)-N(2D) and N(4S)-N(2P) interaction,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 027127. [<a class="text-link" href="pdf/Ding_2023.pdf"><b>PDF</b></a>]</p>
 	      </li>
 		    
 		    
