--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,9 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
+		Tianrui Bai, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Ultraviolet spectroscopy of AlO from first principle,”  <em class="journal">Journal of Quantitative Spectroscopy & Radiative Transfer</em>, Vol. 302, p. 108587. [<a href="/personal/pdf/Bai_et_al_2023.pdf" target="_blank">PDF</a>]
+	      </li>
+	      <li>             
 		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Formation of SiO+ through radiative association of Si+(3s23p 2Pu) and O(2s22p4 3Pg),”  <em class="journal">Astronomy & Astrophysics</em>, Accepted. 
 	      </li>
               <li>            
