--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
 		Tianrui Bai, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Ultraviolet spectroscopy of AlO from first principle,”  <em class="journal">Journal of Quantitative Spectroscopy & Radiative Transfer</em>, Vol. 302, p. 108587. [<a href="/personal/pdf/Bai_et_al_2023.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>             
-		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Formation of SiO+ through radiative association of Si+(3s23p 2Pu) and O(2s22p4 3Pg),”  <em class="journal">Astronomy & Astrophysics</em>, Accepted. 
+		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Formation of SiO+ through radiative association of Si+(3s23p 2Pu) and O(2s22p4 3Pg),”  <em class="journal">Astronomy & Astrophysics</em>, Vol. 35, p. 027127. [<a href="/personal/pdf/Hou_et_al_2023.pdf" target="_blank">PDF</a>]
 	      </li>
               <li>            
 		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Collision integrals for N(4S)-N(4S), N(4S)-N(2D) and N(4S)-N(2P) interaction,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 027127. [<a href="/personal/pdf/Ding_2023.pdf" target="_blank">PDF</a>]
