--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,9 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
+		Ximing Li, <b>Zhi Qin*</b>, Guangan Chen, Linhua Liu*, 2023, “Reaction dynamics of C(3P) + Si2(X 3Σ−𝑔)→Si(3P) + SiC(X 3Π) on a global CHIPR potential energy surface of the ground state Si2C(X 1A1),”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Accepted.
+	      </li>
+	      <li>            
 		Tianrui Bai, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Ultraviolet spectroscopy of AlO from first principle,”  <em class="journal">Journal of Quantitative Spectroscopy & Radiative Transfer</em>, Vol. 302, p. 108587. [<a href="/personal/pdf/Bai_et_al_2023.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>             
