--- a/publications.html
+++ b/publications.html
@@ -82,10 +82,11 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
-		Ximing Li, <b>Zhi Qin*</b>, Guangan Chen, Linhua Liu*, 2023, “Reaction dynamics of C(3P) + Si2(X 3Σ−𝑔)→Si(3P) + SiC(X 3Π) on a global CHIPR potential energy surface of the ground state Si2C(X 1A1),”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Accepted.
+		Ximing Li, <b>Zhi Qin*</b>, Guangan Chen, Linhua Liu*, 2023, “Reaction dynamics of C(3P) + Si2(X 3Σ−𝑔)→Si(3P) + SiC(X 3Π) on a global CHIPR potential energy surface of the ground state Si2C(X 1A1),”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Vol. 522, p. 3049-3057. [<a href="/personal/pdf/Li_2023_mnras.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
-		Tianrui Bai, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Ultraviolet spectroscopy of AlO from first principle,”  <em class="journal">Journal of Quantitative Spectroscopy & Radiative Transfer</em>, Vol. 302, p. 108587. [<a href="/personal/pdf/Bai_et_al_2023.pdf" target="_blank">PDF</a>]
+		Tianrui Bai, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Ultraviolet sp
+	      </li>ectroscopy of AlO from first principle,”  <em class="journal">Journal of Quantitative Spectroscopy & Radiative Transfer</em>, Vol. 302, p. 108587. [<a href="/personal/pdf/Bai_et_al_2023.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>             
 		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Formation of SiO+ through radiative association of Si+(3s23p 2Pu) and O(2s22p4 3Pg),”  <em class="journal">Astronomy & Astrophysics</em>, Vol. 672, p. A25. [<a href="/personal/pdf/Hou_et_al_2023.pdf" target="_blank">PDF</a>]
