--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,12 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
+		Guangan Chen, <b>Zhi Qin*</b>, Ximing Li, Linhua Liu*, 2023, “Reaction dynamics of P(4S) + O2(X 3Σ-) → O(3P) + PO(X 2Π) on a global CHIPR potential energy surface of PO2(X 2A1): implication for atmospheric modelling,”  <em class="journal"> </em>, Submitted.
+	      </li>
+	      <li>            
+		<b>Zhi Qin</b>, Peigen Hu, Jing Li*, Linhua Liu*, 2023, “Radiative association of P+(3P) and O(3P) for the PO+ formation,”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Accepted.
+	      </li>
+	      <li>            
 		Ximing Li, <b>Zhi Qin*</b>, Guangan Chen, Linhua Liu*, 2023, “Reaction dynamics of C(3P) + Si2(X 3Σ−𝑔)→Si(3P) + SiC(X 3Π) on a global CHIPR potential energy surface of the ground state Si2C(X 1A1),”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Vol. 522, p. 3049-3057. [<a href="/personal/pdf/Li_2023_mnras.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
