--- a/publications.html
+++ b/publications.html
@@ -82,10 +82,10 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
-		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport collision integrals for C(5S)-H(2S), C(1S)-H(2S), C(1D)-H(2S), and C(3P)-H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, In revision.
+		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport collision integrals for C(5S)-H(2S), C(1S)-H(2S), C(1D)-H(2S), and C(3P)-H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, In press.
 	      </li>
 	      <li>            
-		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Scattering cross sections and collision integrals for N(4S)-N+(3P) and N(4S)-N+(1D) interactions,”  <em class="journal">Physics of Fluids</em>, In press.
+		Zi Ding, <b>Zhi Qin*</b>, Marcin Buchowiecki, Linhua Liu*, 2023, “Scattering cross sections and collision integrals for N(4S)-N+(3P) and N(4S)-N+(1D) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 087120. [<a href="/personal/pdf/Ding_2023_2.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
 		Guangan Chen, <b>Zhi Qin*</b>, Ximing Li, Linhua Liu*, 2023, “Reaction dynamics of P(4S) + O2(X 3Σ-) → O(3P) + PO(X 2Π) on a global CHIPR potential energy surface of PO2(X 2A1): implication for atmospheric modelling,”  <em class="journal"> </em>, Submitted.
