--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
-		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport collision integrals for C(5S)-H(2S), C(1S)-H(2S), C(1D)-H(2S), and C(3P)-H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, In press.
+		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport collision integrals for C(5S)-H(2S), C(1S)-H(2S), C(1D)-H(2S), and C(3P)-H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 087133. [<a href="/personal/pdf/Hou_et_al_2023_2.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
 		Zi Ding, <b>Zhi Qin*</b>, Marcin Buchowiecki, Linhua Liu*, 2023, “Scattering cross sections and collision integrals for N(4S)-N+(3P) and N(4S)-N+(1D) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 087120. [<a href="/personal/pdf/Ding_2023_2.pdf" target="_blank">PDF</a>]
