--- a/publications.html
+++ b/publications.html
@@ -88,7 +88,7 @@
 		Zi Ding, <b>Zhi Qin*</b>, Marcin Buchowiecki, Linhua Liu*, 2023, “Scattering cross sections and collision integrals for N(4S)-N+(3P) and N(4S)-N+(1D) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 087120. [<a href="/personal/pdf/Ding_2023_2.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
-		Guangan Chen, <b>Zhi Qin*</b>, Ximing Li, Linhua Liu*, 2023, “Reaction dynamics of P(4S) + O2(X 3Σ-) → O(3P) + PO(X 2Π) on a global CHIPR potential energy surface of PO2(X 2A1): implication for atmospheric modelling,”  <em class="journal"> </em>, Submitted.
+		Guangan Chen, <b>Zhi Qin*</b>, Ximing Li, Linhua Liu*, 2023, “Reaction dynamics of P(4S) + O2(X 3Σ-) → O(3P) + PO(X 2Π) on a global CHIPR potential energy surface of PO2(X 2A1): implication for atmospheric modelling,”  <em class="journal">Atmospheric Chemisty and Physics</em>, Vol. 23, p. 10643-10659. [<a href="/personal/pdf/Chen_et_al_ACP.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
 		<b>Zhi Qin</b>, Peigen Hu, Jing Li*, Linhua Liu*, 2023, “Radiative association of P+(3P) and O(3P) for the PO+ formation,”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Vol. 523, p. 2684-2692. [<a href="/personal/pdf/Qin_et_al_MNRAS_2023.pdf" target="_blank">PDF</a>]
