--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,9 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
+		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport cross sections and collision integrals for C+(2P)–H(2S), C(3P)–H+(1S), C(1D)–H+(1S), and C+(4P)–H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 107139. [<a href="/personal/pdf/Hou_et_al_2023_3.pdf" target="_blank">PDF</a>]
+	      </li>
+	      <li>            
 		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport collision integrals for C(5S)-H(2S), C(1S)-H(2S), C(1D)-H(2S), and C(3P)-H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 087133. [<a href="/personal/pdf/Hou_et_al_2023_2.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
