--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,10 @@
 
             <!--<h4 class="pub-year-head">Under review</h4>-->
 
-              
+              <h4 class="pub-year-head">2024</h4>
+	      <li>            
+		Tianrui Bai, Xinglin Yang, <b>Zhi Qin*</b>, Linhua Liu*, 2024, “Photodissociation cross sections and rates of NaO,”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Vol. 527, p. 3847-3857. [<a href="/personal/pdf/Bai_et_al_2024.pdf" target="_blank">PDF</a>]
+	      </li>
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
