--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
               
               <h4 class="pub-year-head">2023</h4>
 	      <li>            
-		<b>Zhi Qin</b>, Peigen Hu, Tianrui Bai*, Linhua Liu*, 2023, “A theoretical Sstudy of temperature-dependent photodissociation cross sections and rates for O2,”  <em class="journal">The Astrophysical Journal Supplement Series</em>, Vol. 269, p. 48(10pp). [<a href="/personal/pdf/Qin_2023_ApJS_269_48.pdf" target="_blank">PDF</a>]
+		<b>Zhi Qin</b>, Peigen Hu, Tianrui Bai*, Linhua Liu*, 2023, “A theoretical study of temperature-dependent photodissociation cross sections and rates for O2,”  <em class="journal">The Astrophysical Journal Supplement Series</em>, Vol. 269, p. 48(10pp). [<a href="/personal/pdf/Qin_2023_ApJS_269_48.pdf" target="_blank">PDF</a>]
 	      </li>
 	      <li>            
 		Zhenlu Hou, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport cross sections and collision integrals for C+(2P)–H(2S), C(3P)–H+(1S), C(1D)–H+(1S), and C+(4P)–H(2S) interactions,”  <em class="journal">Physics of Fluids</em>, Vol. 35, p. 107139. [<a href="/personal/pdf/Hou_et_al_2023_3.pdf" target="_blank">PDF</a>]
