--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,9 @@
 
               <h4 class="pub-year-head">2024</h4>
 	      <li>            
+		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2023, “Transport cross sections and collision integrals for N(4S)–O(3P) and N(4S)–O(1D) interactions in high-temperature air plasmas,”  <em class="journal">Physics of Fluids</em>, Vol. 36, p. 037105. [<a href="/personal/pdf/Phys_Fluids_2024_36_037105.pdf" target="_blank">PDF</a>]
+	      </li>
+	      <li>            
 		Tianrui Bai, Xinglin Yang, <b>Zhi Qin*</b>, Linhua Liu*, 2024, “Photodissociation cross sections and rates of NaO,”  <em class="journal">Monthly Notices of the Royal Astronomical Society</em>, Vol. 527, p. 3847-3857. [<a href="/personal/pdf/Bai_et_al_2024.pdf" target="_blank">PDF</a>]
 	      </li>
               
