--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,9 @@
             <!--<h4 class="pub-year-head">Under review</h4>-->
 
               <h4 class="pub-year-head">2024</h4>
+		<li>            
+		Ximing Li, <b>Zhi Qin*</b>, Linhua Liu*, 2024, “High-temperature molecular line list of hydroboron monoxide (HBO),”  <em class="journal">Physical Chemistry Chemical Physics</em>, Vol. 26, p. 12838. [<a href="/personal/pdf/PCCP_2024_26_12838.pdf" target="_blank">PDF</a>]
+	      </li>
 	      <li>            
 		Zi Ding, <b>Zhi Qin*</b>, Linhua Liu*, 2024, “Transport cross sections and collision integrals for N(4S)–O(3P) and N(4S)–O(1D) interactions in high-temperature air plasmas,”  <em class="journal">Physics of Fluids</em>, Vol. 36, p. 037105. [<a href="/personal/pdf/Phys_Fluids_2024_36_037105.pdf" target="_blank">PDF</a>]
 	      </li>
